# Claude-Clinical-Coding

./: .gitignore  Endoscopy_Automation_Guidance.md  Endoscopy_Report_breakdown.md  PRD_NHS_Clinical_Coding_Agent.md  README.md  classbrowser_tool.py  mcp_server.py  nhs_classifications_browser_user_guide.md  nhs_clinical_coder_agent.md  nhs_clinical_coder_agent_sim.py  nhs_clinical_coder_context.md  nhs_clinical_coder_skills.md  nhs_clinical_coder_web_app.py  package-lock.json  package.json  pyproject.toml  rag_coder.py  rag_knowledge_base.py  requirements.txt  tsconfig.json
.obsidian/: graph.json  workspace.json
.rag_db/: chroma.sqlite3
tests/: explore-classbrowser.spec.ts
