[project]
name = "clinical-coding-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastmcp[tasks]>=3.2.4",
    "numpy<2",
    "openai>=1.30.0",
    "pinecone>=7.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "sentence-transformers>=3.0.0",
    "torch==2.2.2",
    "transformers<5",
]
